Spacing Issue

--- a/css/references.css
+++ b/css/references.css
@@ -54,7 +54,7 @@
 .container3 {
   font-color: black;
   left: 10px;
-  top: 675px;
+  top: 650px;
 }
 
 .fourthReference {
@@ -74,7 +74,7 @@
 .container4 {
   font-color: black;
   left: 10px;
-  top: 975px;
+  top: 900px;
 }
 
 
